# mandelbrot

./: Cargo.toml  README.md  meson.build
.github/workflows/: android.yml  linux.yml
build-aux/android/: mandelbrot.xml  rust.cross  rust.native
build-aux/android/container/: android-rust.sh  android-sdk.sh  toolchain.Dockerfile
src/: main.rs
src/widget/: imp.rs  mod.rs
subprojects/: .gitignore  async-channel-2-rs.wrap  gtk.wrap  gtk4-0.8-rs.wrap  gtk4-0.9-rs.wrap  libc-0.2-rs.wrap  num-complex-0.4-rs.wrap  once_cell-1-rs.wrap  rayon-1-rs.wrap  zerocopy-0.7-rs.wrap
subprojects/packagefiles/: .gitignore
subprojects/packagefiles/libc-0.2-rs/meson/: meson.build
subprojects/packagefiles/proc-macro-error-1-rs/meson/: meson.build
subprojects/packagefiles/proc-macro2-1-rs/meson/: meson.build
