[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
glib = "0.14"
gio = "0.14"
cairo-rs = "0.14"
gdk = { package = "gdk4", version = "0.3" }
gtk = { package = "gtk4", version = "0.3" }
lazy_static = "1.0"
num-complex = "0.4"
rayon = "1.0"
