extra_args += '--cfg'
extra_args += 'libc_priv_mod_use'
extra_args += '--cfg'
extra_args += 'libc_union'
extra_args += '--cfg'
extra_args += 'libc_const_size_of'
extra_args += '--cfg'
extra_args += 'libc_align'
extra_args += '--cfg'
extra_args += 'libc_int128'
extra_args += '--cfg'
extra_args += 'libc_core_cvoid'
extra_args += '--cfg'
extra_args += 'libc_packedN'
extra_args += '--cfg'
extra_args += 'libc_cfg_target_vendor'
extra_args += '--cfg'
extra_args += 'libc_non_exhaustive'
extra_args += '--cfg'
extra_args += 'libc_long_array'
extra_args += '--cfg'
extra_args += 'libc_ptr_addr_of'
extra_args += '--cfg'
extra_args += 'libc_underscore_const_names'
extra_args += '--cfg'
extra_args += 'libc_const_extern_fn'

